# mira

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  FEATURES.md  IMPLEMENTATION_MEMO.md  PHASE1_TEST_REPORT.md  PHASE2_TEST_REPORT.md  PHASE4_DOCKER_STATUS.md  POSTGRESQL_SETUP.md  PRODUCT.md  README.md  SERVERS_RUNNING.md  TESTING.md  TODO.md  demo_spec 2.md  docker-compose.yml  index.html  package-lock.json  package.json  quickstart.md  speckit-guide.md
apps/api/: .coverage  .dockerignore  .env.example  Dockerfile  coverage.xml  jest.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 831be18c80c6_add_workspaces_and_isolation.py  e5ccce4cd5a2_baseline_schema_with_auth_tables.py
apps/api/data/examples/: README.md
apps/api/data/examples/llm-wiki/sources/: 01-product-brief.md  03-architecture-review.md  04-operations-runbook.md
apps/api/data/llm-wiki/093c046d-0133-40ef-8eda-ab3b52479161/wiki/: index.md  (+1 more)
apps/api/data/workspace/: README.md
apps/api/mira_api/: __init__.py  audit.py  auth.py  auth_utils.py  config.py  context.py  database.py  dependencies.py  main.py  models.py  storage.py  workspaces.py
apps/api/mira_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/prisma/: schema.prisma
apps/api/scripts/: prisma.cjs
apps/api/src/: app.module.ts  main.ts
apps/api/src/ai/: ai-manual.interceptor.ts  ai-request-context.service.ts  ai.module.ts  ai.service.ts  llm-config.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  current-user.ts  jwt-auth.guard.ts  superuser.guard.ts
apps/api/src/bootstrap/: app.ts  cors.config.ts  pipes.config.ts
apps/api/src/common/: ids.ts  period-filters.ts  period.ts  workspace-types.ts
apps/api/src/health/: health.controller.ts
apps/api/src/me/: me.controller.ts  me.module.ts  me.service.ts  report.service.ts
apps/api/src/me/dto/: account.dto.ts  ai-summary.dto.ts  ask-mira.dto.ts  llm-config.dto.ts  llm-wiki.dto.ts  report.dto.ts  task-refine.dto.ts
apps/api/src/notes/: notes.controller.ts  notes.module.ts  notes.service.ts
apps/api/src/notes/dto/: note.dto.ts
apps/api/src/prisma/: prisma.service.ts
apps/api/src/tasks/: tasks.controller.ts  tasks.module.ts  tasks.service.ts
apps/api/src/tasks/dto/: task.dto.ts
apps/api/src/team/: team.controller.ts  team.module.ts  team.service.ts  tree-utils.ts
apps/api/src/team/dto/: team-node.dto.ts
apps/api/src/users/: users.module.ts  users.service.ts
apps/api/src/workspace-content/: workspace-content.module.ts  workspace-content.service.ts
apps/api/test/: api.e2e-spec.ts  seed-test-db.ts
apps/api/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_reports.py  test_todos.py  test_workspaces.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  mod.rs  settings.rs  state.rs
src-tauri/src/models/: state.rs
(+191 files in other folders)
